--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 
     <div id="movie-list"></div>
   </div>
-    <script type="module" src="/src/movies.js"></script>
+    <script type="module" src="/movies.js"></script>
 </body>
 </html>
